--- a/build.config.json
+++ b/build.config.json
@@ -13,17 +13,11 @@
 		}
 	],
 	"mac": {
-		"target": [
-			"dmg",
-			"zip"
-		],
+		"target": ["dmg", "zip"],
 		"icon": "build/icon.icns"
 	},
 	"win": {
-		"target": [
-			"nsis",
-			"zip"
-		],
+		"target": ["nsis", "zip"],
 		"icon": "build/icon.ico"
 	}
 }
