--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "svelte4-electron",
-	"description": "A SvelteKit app template with Electron support",
+	"name": "markin",
+	"description": "A simple markdown editor",
 	"version": "0.0.1",
 	"private": true,
 	"main": "src/electron.js",
@@ -18,7 +18,8 @@
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"format": "prettier --write ."
+		"format": "prettier --write .",
+		"lint": "prettier --check . && eslint ."
 	},
 	"browserslist": [
 		"Chrome 89"
@@ -28,20 +29,27 @@
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@types/eslint": "^8.56.7",
-		"eslint": "^9.0.0",
+		"@typescript-eslint/eslint-plugin": "^8.1.0",
+		"@typescript-eslint/parser": "^8.1.0",
+		"autoprefixer": "^10.4.20",
+		"eslint": "^9.9.0",
 		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.36.0",
+		"eslint-plugin-svelte": "^2.43.0",
 		"globals": "^15.0.0",
-		"prettier": "^3.1.1",
+		"postcss": "^8.4.41",
+		"prettier": "^3.3.3",
 		"prettier-plugin-svelte": "^3.1.2",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
+		"tailwindcss": "^3.4.9",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.0.0-alpha.20",
 		"vite": "^5.3.1"
 	},
 	"dependencies": {
+		"@electron/remote": "^2.1.2",
+		"@eslint/js": "^9.9.0",
 		"@sveltejs/adapter-static": "^3.0.2",
 		"concurrently": "^8.2.2",
 		"cross-env": "^7.0.3",
@@ -53,6 +61,7 @@
 		"electron-reloader": "^1.2.3",
 		"electron-serve": "^2.0.0",
 		"electron-updater": "^6.2.1",
-		"electron-window-state": "^5.0.3"
+		"electron-window-state": "^5.0.3",
+		"prettier-plugin-tailwindcss": "^0.6.6"
 	}
 }
