--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,32 +1,20 @@
 {
-    "extends": "./.svelte-kit/tsconfig.json",
-    "compilerOptions": {
-        "module": "esnext",
-        "target": "es2020",
-        "moduleResolution": "node",
-        "strict": true,
-        "types": [
-            "vite/client",
-            "node"
-        ],
-        "typeRoots": [
-            "node_modules/@types"
-        ],
-        "lib": [
-            "ESNext"
-        ],
-        "isolatedModules": true,
-        "sourceMap": true,
-        "esModuleInterop": true,
-        "skipLibCheck": true,
-        "forceConsistentCasingInFileNames": true,
-        "allowJs": true,
-        "checkJs": false,
-    },
-    "include": [
-        "src/**/*.d.ts",
-        "src/**/*.ts",
-        "src/**/*.svelte",
-        "src/electron.cjs"
-    ]
+	"extends": "./.svelte-kit/tsconfig.json",
+	"compilerOptions": {
+		"module": "esnext",
+		"target": "es2020",
+		"moduleResolution": "node16",
+		"strict": true,
+		"types": ["vite/client", "node"],
+		"typeRoots": ["node_modules/@types"],
+		"lib": ["ESNext"],
+		"isolatedModules": true,
+		"sourceMap": true,
+		"esModuleInterop": true,
+		"skipLibCheck": true,
+		"forceConsistentCasingInFileNames": true,
+		"allowJs": true,
+		"checkJs": false
+	},
+	"include": ["src/**/*.d.ts", "src/**/*.ts", "src/**/*.svelte", "src/electron.cjs"]
 }
