--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
 	"extends": "./.svelte-kit/tsconfig.json",
 	"compilerOptions": {
-		"module": "esnext",
+		"module": "Node16",
 		"target": "es2020",
 		"moduleResolution": "node16",
 		"strict": true,
