--- a/build.config.json
+++ b/build.config.json
@@ -1,23 +1,37 @@
 {
-	"appId": "com.example.app",
-	"productName": "MyApp",
-	"directories": {
-		"output": "dist"
-	},
-	"files": [
-		"src/electron.cjs",
-		"src/preload.cjs",
-		{
-			"from": "build",
-			"to": ""
-		}
-	],
-	"mac": {
-		"target": ["dmg", "zip"],
-		"icon": "build/icon.icns"
-	},
-	"win": {
-		"target": ["nsis", "zip"],
-		"icon": "build/icon.ico"
-	}
+  "appId": "",
+  "productName": "",
+  "directories": {
+    "output": "dist"
+  },
+  "files": [
+    "src/electron.cjs",
+    "src/preload.cjs",
+    {
+      "from": "build",
+      "to": ""
+    }
+  ],
+  "mac": {
+    "target": [
+      "dmg",
+      "zip"
+    ],
+    "icon": "build/icon.icns"
+  },
+  "win": {
+    "target": [
+      "nsis",
+      "zip"
+    ],
+    "icon": "build/icon.ico"
+  },
+  "linux": {
+    "target": [
+      "AppImage",
+      "deb",
+      "zip"
+    ],
+    "icon": "build/icon.png"
+  }
 }
